--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -122,6 +122,24 @@
     <Compile Include="Forms\FormProductos.Designer.cs">
       <DependentUpon>FormProductos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormRptFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormRptFactura.Designer.cs">
+      <DependentUpon>FormRptFactura.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormRptIvaTrimestre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormRptIvaTrimestre.Designer.cs">
+      <DependentUpon>FormRptIvaTrimestre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormRptVentasMes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormRptVentasMes.Designer.cs">
+      <DependentUpon>FormRptVentasMes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormVenta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +171,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormProductos.resx">
       <DependentUpon>FormProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormRptFactura.resx">
+      <DependentUpon>FormRptFactura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormRptIvaTrimestre.resx">
+      <DependentUpon>FormRptIvaTrimestre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormRptVentasMes.resx">
+      <DependentUpon>FormRptVentasMes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormVenta.resx">
       <DependentUpon>FormVenta.cs</DependentUpon>
