--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -91,6 +91,7 @@
     <Compile Include="DAO\ClienteDAO.cs" />
     <Compile Include="DAO\CreditoDAO.cs" />
     <Compile Include="DAO\ProductoDAO.cs" />
+    <Compile Include="DAO\ReporteDAO.cs" />
     <Compile Include="DAO\VentaDAO.cs" />
     <Compile Include="Data\Db.cs" />
     <Compile Include="Form1.cs">
@@ -129,6 +130,12 @@
     <Compile Include="Forms\FormProductos.Designer.cs">
       <DependentUpon>FormProductos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormReporteVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormReporteVentas.Designer.cs">
+      <DependentUpon>FormReporteVentas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormRptFactura.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +172,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Session.cs" />
     <Compile Include="Utils\HashHelper.cs" />
+    <Compile Include="Utils\ThemeHelper.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +190,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormProductos.resx">
       <DependentUpon>FormProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormReporteVentas.resx">
+      <DependentUpon>FormReporteVentas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormRptFactura.resx">
       <DependentUpon>FormRptFactura.cs</DependentUpon>
