--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -171,6 +171,9 @@
     <Compile Include="Models\ProductoForVenta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Acl.cs" />
+    <Compile Include="Security\Audit.cs" />
+    <Compile Include="Security\Feature.cs" />
     <Compile Include="Security\Session.cs" />
     <Compile Include="Utils\HashHelper.cs" />
     <Compile Include="Utils\ThemeHelper.cs" />
