--- a/WindowsFormsApp1/packages.config
+++ b/WindowsFormsApp1/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net48" />
   <package id="Oracle.ManagedDataAccess" version="23.26.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.2" targetFramework="net48" />
