--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,7 +36,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -127,6 +142,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormAcercaDe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormAcercaDe.Designer.cs">
+      <DependentUpon>FormAcercaDe.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormBitacora.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormBitacora.Designer.cs">
+      <DependentUpon>FormBitacora.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormCalendario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormCalendario.Designer.cs">
+      <DependentUpon>FormCalendario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormCategorias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,11 +178,29 @@
     <Compile Include="Forms\FormCreditos.Designer.cs">
       <DependentUpon>FormCreditos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormExistenciasBajas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormExistenciasBajas.Designer.cs">
+      <DependentUpon>FormExistenciasBajas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormExportadorCsv.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormExportadorCsv.Designer.cs">
+      <DependentUpon>FormExportadorCsv.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormMorosos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormMorosos.Designer.cs">
+      <DependentUpon>FormMorosos.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormProductos.cs">
       <SubType>Form</SubType>
@@ -175,17 +226,23 @@
     <Compile Include="Forms\FormRptIvaTrimestre.Designer.cs">
       <DependentUpon>FormRptIvaTrimestre.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormRptVentasMes.cs">
+    <Compile Include="Forms\FormUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormRptVentasMes.Designer.cs">
-      <DependentUpon>FormRptVentasMes.cs</DependentUpon>
+    <Compile Include="Forms\FormUsuarios.Designer.cs">
+      <DependentUpon>FormUsuarios.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormVenta.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\FormVenta.Designer.cs">
       <DependentUpon>FormVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormTopProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormTopProductos.Designer.cs">
+      <DependentUpon>FormTopProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Cliente.cs" />
@@ -207,6 +264,15 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormAcercaDe.resx">
+      <DependentUpon>FormAcercaDe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormBitacora.resx">
+      <DependentUpon>FormBitacora.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormCalendario.resx">
+      <DependentUpon>FormCalendario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormCategorias.resx">
       <DependentUpon>FormCategorias.cs</DependentUpon>
     </EmbeddedResource>
@@ -216,8 +282,17 @@
     <EmbeddedResource Include="Forms\FormCreditos.resx">
       <DependentUpon>FormCreditos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormExistenciasBajas.resx">
+      <DependentUpon>FormExistenciasBajas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormExportadorCsv.resx">
+      <DependentUpon>FormExportadorCsv.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormMorosos.resx">
+      <DependentUpon>FormMorosos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormProductos.resx">
       <DependentUpon>FormProductos.cs</DependentUpon>
@@ -231,8 +306,11 @@
     <EmbeddedResource Include="Forms\FormRptIvaTrimestre.resx">
       <DependentUpon>FormRptIvaTrimestre.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormRptVentasMes.resx">
-      <DependentUpon>FormRptVentasMes.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormTopProductos.resx">
+      <DependentUpon>FormTopProductos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormUsuarios.resx">
+      <DependentUpon>FormUsuarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormVenta.resx">
       <DependentUpon>FormVenta.cs</DependentUpon>
@@ -293,6 +371,18 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 y x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
