--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -373,6 +373,7 @@
     <None Include="Resources\ChatGPT Image 16 nov 2025, 16_02_17.png" />
     <None Include="Resources\ChatGPT Image 16 nov 2025, 16_02_171.png" />
     <None Include="Resources\ChatGPT Image 16 nov 2025, 15_58_10.png" />
+    <None Include="Resources\ChatGPT Image 17 nov 2025, 03_16_15.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
